<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Bookd</string>
    <string name="menu_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="welcome">Best Place for Bookworms!</string>
    <string name="login">Login</string>
    <string name="signup">Sign Up</string>
    <string name="title_activity_book_list">BookList</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_each_book">EachBook</string>
    <string name="Add_Review">Add Review</string>
    <string name="title_activity_my_reviews">My_reviews</string>
    <string name="new_user">New User?</string>
    <string name="title_activity_all_reviews">All_reviews</string>

</resources>
