<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/shelf"
    tools:context=".MainActivity" >

    <EditText
        android:id="@+id/et_username"
        android:layout_width="wrap_content"
        android:background="@drawable/roundedtextbox"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="124dp"
        android:ems="10"
        android:hint="@string/username"
        android:paddingBottom="@dimen/small"
        android:paddingLeft="@dimen/small"
        android:paddingRight="@dimen/small"
        android:paddingTop="@dimen/small" >
                <requestFocus />
    </EditText>

    <TextView
        android:id="@+id/password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:textStyle="bold"
        android:layout_marginTop="33dp"
        android:text="@string/welcome"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="@color/welcome_screen"
        android:textSize="@dimen/welcome_text" />

    <EditText
        android:id="@+id/et_password"
        android:background="@drawable/roundedtextbox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/et_username"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="39dp"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:paddingBottom="@dimen/small"
        android:paddingLeft="@dimen/small"
        android:paddingRight="@dimen/small"
        android:paddingTop="@dimen/small" />

     <Button
         android:id="@+id/signup"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
         android:layout_centerHorizontal="true"
         android:layout_marginBottom="31dp"
         android:background="@drawable/roundedbutton"
         android:paddingBottom="@dimen/large"
         android:paddingLeft="@dimen/activity_horizontal_margin"
         android:paddingRight="@dimen/activity_horizontal_margin"
         android:paddingTop="@dimen/large"
         android:text="@string/signup"
         android:textColor="@color/strawberry" />

     <TextView
         android:id="@+id/textView1"
         android:textColor="@color/welcome_screen"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_above="@+id/signup"
         android:textStyle="bold"
         android:layout_centerHorizontal="true"
         android:layout_marginBottom="20dp"
         android:text="@string/new_user"
         android:textAppearance="?android:attr/textAppearanceLarge" />

     <Button
         android:id="@+id/login"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_above="@+id/textView1"
         android:layout_centerHorizontal="true"
         android:layout_marginBottom="18dp"
         android:background="@drawable/roundedbutton"
         android:paddingBottom="@dimen/large"
         android:paddingLeft="@dimen/activity_horizontal_margin"
         android:paddingRight="@dimen/activity_horizontal_margin"
         android:paddingTop="@dimen/large"
         android:text="@string/login"
         android:textColor="@color/strawberry" />

</RelativeLayout>
